--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
     url: /#pubs
   - title: "<b>Teaching</b>"
     url: /#teaching
-  - title: "<b>R Screencasts</b>"
-    url: /screencasts
+  - title: "<b>R Media</b>"
+    url: /#media
   - title: "<b>Datasets</b>"
     url: /#datasets
   - title: "<b>C.V.</b>"
